--- a/pom.xml
+++ b/pom.xml
@@ -340,13 +340,19 @@
 
     <profiles>
         <profile>
-            <id>dev</id>
+            <id>local</id>
             <properties>
-                <spring.active>dev</spring.active>
+                <spring.active>local</spring.active>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
+        </profile>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <spring.active>dev</spring.active>
+            </properties>
         </profile>
         <profile>
             <id>test</id>
