--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,13 +14,13 @@ spring:
         driver-class-name: com.mysql.jdbc.Driver
         password: '123456'
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:3306/ds0
+        jdbc-url: jdbc:mysql://localhost:3306/ds0
         username: root
       ds1:
         driver-class-name: com.mysql.jdbc.Driver
         password: '123456'
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:3306/ds1
+        jdbc-url: jdbc:mysql://localhost:3306/ds1
         username: root
       names: ds0,ds1
     sharding:
