--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-boot.version>2.3.6.RELEASE</spring-boot.version>
-        <dubbo.version>2.7.11</dubbo.version>
+        <spring-boot.version>2.4.8</spring-boot.version>
+        <dubbo.version>2.7.12</dubbo.version>
         <skywalking.version>8.5.0</skywalking.version>
         <sentinel.version>1.8.0</sentinel.version>
         <sharding-sphere.version>4.1.1</sharding-sphere.version>
